--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -285,6 +285,10 @@
   "codex.form.axolotl0.instincts": ["你开始想要",
     {
     "text":"待在水中", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在繁茂洞穴群系中", "color":"#c67681"
     }],
   "codex.form.axolotl1.title": ["\n生长后的腮与有力的尾部让你能够自由探索被淹没的结构。刚捕获的鱼类是最适合你的食物"],
   "codex.form.axolotl1.appearance": ["你脸颊两侧的腮丛进一步生长。在水中，它们几乎可以供给你所需的所有氧气\n你身上的鳍膜进一步生长，覆盖了你身体的更多部分。它们的颜色似乎变得更加鲜艳了\n你的尾部进一步延长，变得更加强壮\n你的颈部生长出了吸水性很强的白色绒毛"],
@@ -293,6 +297,10 @@
   "codex.form.axolotl1.instincts": ["你想要尽可能",
     {
       "text":"待在水中", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在繁茂洞穴群系中", "color":"#c67681"
     },
     {
       "text":"\n狩猎鱼类与食用更多生鱼肉", "color":"#c67681"
@@ -313,6 +321,10 @@
   "codex.form.ocelot0.instincts": ["你开始想要",
     {
       "text":"吃更多生肉", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在丛林群系中", "color":"#c67681"
     }],
   "codex.form.ocelot1.title": ["\n更多的猫科动物特征让你能够在树林中自如攀越，并使用有力的前爪发动致命一击。现在生肉似乎比熟食更加吸引你"],
   "codex.form.ocelot1.appearance": ["斑驳的毛皮现在覆盖了你的胸腹与后背的大部分区域。它们与你脖颈的毛领相连，看起来就像是一件斗篷\n带斑点的白色皮毛从你的四肢末端进一步向上生长。在皮毛之下，你手掌与足部的结构变得更接近猫科动物，它们现在有可以伸缩的锐利爪子以及提供缓冲的软垫\n在变长的同时，你的尾部也变得更加灵活有力。它能够很好地帮助你在空中保持平衡，但与此同时，你感觉它也在越来越多地影响你走路与奔跑的姿态"],
@@ -321,6 +333,10 @@
   "codex.form.ocelot1.instincts": ["你想要尽可能",
     {
       "text":"吃更多的生肉", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在丛林群系中", "color":"#c67681"
     },
     "\n你的内心中产生了",
     {
@@ -348,7 +364,12 @@
   "codex.form.bat0.instincts": ["你开始想要",
     {
       "text":"待在暗处", "color":"#c67681"
-    }],
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在溶洞群系中", "color":"#c67681"
+    }
+  ],
   "codex.form.bat1.title": ["\n新的视觉与力量让你在洞穴与深夜的黑暗中游刃有余。现在，只是想到暴露在日光下的念头就会让你感到难受。"],
   "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些"],
   "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
@@ -356,6 +377,10 @@
   "codex.form.bat1.instincts": ["你想要尽可能",
     {
       "text":"待在暗处", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在溶洞群系中", "color":"#c67681"
     },
     {
       "text":"\n食用更多水果的想法", "color":"#c67681"
@@ -378,6 +403,10 @@
   "codex.form.familiar_fox0.instincts": ["你开始想要",
     {
       "text":" 吃一些甜浆果", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在针叶林群系中", "color":"#c67681"
     },"\n你开始想要",
     {
       "text":" 在雪地上奔跑", "color":"#c67681"
@@ -390,6 +419,10 @@
     {
       "text":"从生物身上吸取能量的想法", "color":"#c67681"
     },"开始吸引你\n",
+    "你开始想要",
+    {
+      "text":" 待在针叶林群系中\n", "color":"#c67681"
+    },
     {
       "text":"待在甜浆果丛中的想法", "color":"#c67681"
     },"开始吸引你","\n女巫与唤魔者身上的魔力对你产生了某种吸引力，你开始想要",
