本地化完成，动画稍作优化，准备放出 Localization finished, animations optimized, ready to launch new version

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -407,6 +407,58 @@
   "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
   "codex.form.bat2.instincts": [" "],
+
+  "codex.form.bat3.title": ["\n对于现在的你而言，一处凉爽而黑暗的洞窟可能更适合作为你的新家.."],
+  "codex.form.bat3.appearance": ["细密的绒毛完全覆盖了你的身体，近乎与头部等大的双耳帮助你定位四周的环境，让你不会遗漏周围哪怕最细微的声响\n你的前肢进一步延伸，为巨大的膜翼留出空间。如果你愿意的话，你可以用膜翼将你的身体完全包覆起来\n附有钩爪的前爪与后足让你可以与你的同类一样攀附在墙壁上，或者倒挂在洞穴的穹顶下\n你的身体已经完全为了飞行与滑翔而特化。你的后足不再能够支撑起身体的重量，只能以近乎四足的姿态在地面上缓慢移动"],
+  "codex.form.bat3.pros": ["新形成的钩爪给了你攀附与倒挂的能力：\n\n在空中时，你可以在空手情况下右键“使用”方块的侧表面来攀附在其上。攀附过程中，可以向瞄准方向按下空格键来蹬墙高速滑翔过去\n在空中时，你可以在空手情况下右键“使用”方块的下表面来将自己倒挂上去。倒挂过程中，你的生命值会缓慢恢复\n巨大的膜翼让你能够在空中高速滑翔。你可以在疾跑的同时跳跃来高速向前飞行。即使在空中时，你也可以按下疾跑键来加快滑翔速度\n你现在可以在黑暗中清晰地分辨事物\n坚硬而有力的前爪提升了你的近战伤害，而且还让你可以徒手高速挖掘方块，并正常收获掉落物\n通过扇动膜翼，你可以跳的更高，从空中缓慢降落。自然，它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高"],
+  "codex.form.bat3.cons": ["由于重心的变化，你现在只能以近乎四足的姿态在地面上缓慢移动\n现在，阳光会对你造成严重的影响。在阳光下，你的最大生命值大大减少，近战伤害增加的效果也不再能够维持\n你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落。自然，你也不再能够操作弓弩\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能\n你不再能食肉，你的身体已经彻底无法消化它们了"],
+  "codex.form.bat3.instincts": [" "],
+
+  "codex.form.snow_fox0.title":["\n诅咒对你的身体产生了一些影响，白色的绒毛开始从你身上生长出来。你有点想要在雪地上奔跑"],
+  "codex.form.snow_fox0.appearance": ["你的肢体末端长出了灰蓝色的软毛。你注意到它们的颜色在手部与足部会更深一些\n你的耳朵向头顶移动，它们变成了三角形，被浅灰的软毛所覆盖\n你的指甲变得更加尖利，从灰蓝色的皮毛中稍微突出出来\n蓬松的白色绒毛聚集在你的脖颈处，从远处看就像一条围巾一样\n你背部的下方长出了一团雪白色的毛簇，触碰它时，你可以感受到其中隐藏的骨质突起"],
+  "codex.form.snow_fox0.pros": ["你的身体更具有活力，奔跑速度变得更快\n你发现自己在奔跑的过程中跳跃可以跳的更高一些"],
+  "codex.form.snow_fox0.cons": ["你身上蓬松的绒毛让你无法忍受炎热的环境。当白天在炎热的沙漠群系，或者炽热的下界中时，你的最大生命值稍微减少\n你新长出的毛簇稍微拖慢了你在水中的移动速度"],
+  "codex.form.snow_fox0.instincts": ["你开始想要",
+    {
+      "text":" 吃一些甜浆果", "color":"#c67681"
+    },
+    "\n你开始想要",
+    {
+      "text":" 待在针叶林群系中", "color":"#c67681"
+    },"\n你开始想要",
+    {
+      "text":" 在雪地上奔跑", "color":"#c67681"
+    }],
+  "codex.form.snow_fox1.title": ["\n白色与灰蓝色的绒毛在你身上进一步蔓延，一条雪白的蓬松尾巴在你身后摆动"],
+  "codex.form.snow_fox1.appearance": ["白色与灰蓝色的绒毛进一步在你身上蔓延。你的四肢与躯干上部已经几乎被厚实的皮毛所覆盖\n你头顶三角形的耳朵进一步扩大，让你能够听见更微弱的声响。\n你的手部与足部比之前大了一圈，它们变成了更加接近爪子的结构\n你脖颈处的绒毛进一步生长，它们非常保暖..也许过于保暖了\n你尾骨处的白色毛簇已经成长为了一条蓬松的尾巴，它的尖端颜色更深，在你身后缓慢地摆动着\n\n令人在意的是，虽然已经得到了净化，不过你依然能在体内够感受到一种外来的魔力..它给你以寒冷，冰凉的感觉"],
+  "codex.form.snow_fox1.pros": ["你体内寒冷的魔力给了你一些新的能力。你投掷出的雪球得到了增幅，能够造成更多伤害\n\n狐狸信任你。它们不会主动跑开\n你的奔跑速度变得更快，新长出的皮毛可以保护你在甜浆果丛中自如穿梭。同时，甜浆果也能给你带来更多的饱食度\n你发现你的身体变得更适合跳跃。你在奔跑时可以跳的更高，你的跳跃暴击伤害也增加了"],
+  "codex.form.snow_fox1.cons": ["蓬松的皮毛并不是你对炎热环境抗拒的唯一原因..它似乎与你体内寒冷的魔力也有关系\n\n当白天在炎热的沙漠群系，或者炽热的下界中时，你的最大生命值会进一步减少\n另外，当你非常靠近岩浆，或者在岩浆中时，你会逐渐受到伤害，即使有火焰免疫效果也一样\n你在水中的移动速度稍微减慢\n在攻击灾厄村民时，你现在也会感受到异常的眩晕"],
+  "codex.form.snow_fox1.instincts": ["",
+    {
+      "text":"跳跃攻击敌人的想法", "color":"#c67681"
+    },"开始吸引你\n",
+    {
+      "text":"奔跑中跳跃的想法", "color":"#c67681"
+    },"开始吸引你\n",
+    "你开始想要",
+    {
+      "text":" 待在针叶林群系中\n", "color":"#c67681"
+    },
+    {
+      "text":"待在甜浆果丛中的想法", "color":"#c67681"
+    },"开始吸引你"
+  ],
+  "codex.form.snow_fox2.title": ["你现在的样子几乎与一只直立行走的雪狐别无二致"],
+  "codex.form.snow_fox2.appearance": ["你的后足已经完全变成了趾行的结构，你的面部也向前突出形成了短小的吻部，让你看起来更加接近某种野兽\n你的尾部几乎到达了你身长的一大半。过于厚实的绒毛受到重力的影响，让其的尖端微微下垂\n除了灰蓝色的四爪与头顶的三角形耳朵，以及尾部末端的浅灰色绒毛以外，你的身体完全被厚实的雪白绒毛所覆盖。它们可以作为雪地中最好的保护色\n你脖颈处的毛簇变得更加蓬松，甚至让你的肩膀都感受到了一些重量\n\n你感受到自己越来越适应体内的那股寒冷魔力的存在…"],
+  "codex.form.snow_fox2.pros": ["你更加适应体内寒冷的魔力，能够引出其更强的力量：\n你投掷出的雪球能够造成更多伤害。由于附加了寒气魔力，你可以通过投掷雪球将水变成冰，乃至于让岩浆凝固\n\n变化的身体给了你某些全新的肌肉记忆。在维持奔跑时，通过掌握时机，你可以触发每次高度递增的三连跳\n通过对跳跃技巧的掌握，现在你的跳跃暴击伤害会随着下落距离而增加，最高可以到达2倍\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n甜浆果可以给你带来更多的饱食度\n狐狸信任你。它们不会主动跑开\n你现在可以在细雪上行走"],
+  "codex.form.snow_fox2.cons": ["你体内寒冷的魔力也带来了一些副作用：\n\n当你处于燃烧状态时，会受到额外的燃烧伤害\n当白天在炎热的沙漠群系，或者炽热的下界中时，你的最大生命值会更进一步减少\n另外，当你非常靠近岩浆，或者在岩浆中时，你会逐渐受到伤害，即使有火焰免疫效果也一样\n腿甲与鞋不再适合你新的身体结构\n你蓬松的毛皮进一步拖慢了你在水中的移动速度"],
+  "codex.form.snow_fox2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
+  "codex.form.snow_fox3.title": ["\n你完全接纳了体内的那股寒冷的魔力，让它彻底改变了你。是时候在雪林中找一处新的巢穴了.."],
+  "codex.form.snow_fox3.appearance": ["除了异常蓬松的颈毛与近乎与身体等长的大尾巴以外，你整体看上去与一只野生雪狐别无二致\n你的眼睛现在毫无疑问属于某种野生动物。在阳光下，你的瞳孔会收缩成一条狭缝\n\n你体内的寒冷魔力已经与原本的变幻魔法完全融合在一起，并永远转变为了某种全新的东西..\n空气中的水汽在你身旁会凝结成细小的冰晶。即使在暴风雪中，你也不会感受到丝毫寒冷。然而，曾经温和的气候对现在的你而言已经炎热异常\n看来你只能接受这一点了。"],
+  "codex.form.snow_fox3.pros": ["寒冷的魔力已经与你完全融为一体：\n你投掷出的雪球能够造成大量的伤害，威力堪比箭矢。由于附加了寒气魔力，你可以通过投掷雪球将水变成冰，乃至于让岩浆凝固\n\n四足行动的身体给了你极大的敏捷性：\n在下落时，你可以通过右键“使用”地面，利用前爪让自己灵活地腾跃到空中\n在维持奔跑时，通过掌握时机，你可以触发每次高度递增的三连跳\n你的跳跃暴击伤害会随着下落距离而增加，最高可以到达2倍\n\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n甜浆果可以给你带来更多的饱食度\n狐狸信任你。它们不会主动跑开\n你现在可以在细雪上行走"],
+  "codex.form.snow_fox3.cons": ["寒冷的魔力组成了你的身体。它带来了一些副作用：\n火焰与高温是你最大的敌人。你会受到额外的燃烧伤害，并且你身上的火焰不会自然扑灭，除非进入水中或者使用水瓶灭火\n当白天在炎热的沙漠群系，或者炽热的下界中时，你的最大生命值会大幅度减少。除此之外，温暖的平原群系对现在的你而言也热的难以忍受，位于其中时，你的最大生命值也会减少\n当你非常靠近岩浆或燃烧的火焰，或者在岩浆中时，你会逐渐受到伤害，即使有火焰免疫效果也一样\n腿甲与鞋不再适合你四足的身体结构\n你蓬松的毛皮进一步拖慢了你在水中的移动速度"],
+  "codex.form.snow_fox3.instincts": [""],
+
   "codex.form.familiar_fox0.title":["\n诅咒对你的身体产生了一些影响，橙红色的毛簇开始从你身上生长出来。你有点想要在雪地上奔跑"],
   "codex.form.familiar_fox0.appearance": ["你的肢体末端长出了黑色的软毛。在向上蔓延的过程中，它们的颜色会逐渐过渡到橙红色\n你的耳朵向头顶移动，它们变成了三角形，并且也被黑色的软毛所覆盖\n你的指甲变得更加尖利，它们在黑色的皮毛中看起来相当显眼\n你发现身体的各处零星地长出了橙红色的软毛，其中最引人注目的是由你背部下方长出的一团红白相间的毛簇，触碰它时，你可以感受到其中隐藏的骨质突起"],
   "codex.form.familiar_fox0.pros": ["让你疑惑的是，女巫似乎不再会试图攻击你\n你的身体更具有活力，奔跑速度变得更快\n你的感知能力变得更强，让你能发现更多掉落物，其大致相当于抢夺I附魔"],
