补充缺失本地化条目-药水箭 修复压缩能量效果本地化ID错误

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -38,68 +38,84 @@
   "item.minecraft.potion.effect.moondust_potion": ["月尘药水"],
     "item.minecraft.splash_potion.effect.moondust_potion": ["喷溅型月尘药水"],
     "item.minecraft.lingering_potion.effect.moondust_potion": ["滞留型月尘药水"],
+  "item.minecraft.tipped_arrow.effect.moondust_potion": ["月尘之箭"],
   "effect.shape-shifter-curse.moondust_potion": ["月之尘的精华在其中翻涌，它需要进一步加工"],
   "item.minecraft.potion.effect.to_bat_0_potion": ["蝙蝠咒文药水"],
   "item.minecraft.splash_potion.effect.to_bat_0_potion": ["喷溅型蝙蝠咒文药水"],
   "item.minecraft.lingering_potion.effect.to_bat_0_potion": ["滞留型蝙蝠咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_bat_0_potion": ["蝙蝠咒文之箭"],
   "effect.shape-shifter-curse.to_bat_0_potion": ["吱吱！"],
   "item.minecraft.potion.effect.to_allay_sp_potion": ["悦灵咒文药水"],
     "item.minecraft.splash_potion.effect.to_allay_sp_potion": ["喷溅型悦灵咒文药水"],
     "item.minecraft.lingering_potion.effect.to_allay_sp_potion": ["滞留型悦灵咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_allay_sp_potion": ["悦灵咒文之箭"],
   "effect.shape-shifter-curse.to_allay_sp_potion": ["紫晶碎片！它会很重要的"],
   "item.minecraft.potion.effect.to_axolotl_0_potion": ["美西螈咒文药水"],
     "item.minecraft.splash_potion.effect.to_axolotl_0_potion": ["喷溅型美西螈咒文药水"],
     "item.minecraft.lingering_potion.effect.to_axolotl_0_potion": ["滞留型美西螈咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_axolotl_0_potion": ["美西螈咒文之箭"],
   "effect.shape-shifter-curse.to_axolotl_0_potion": ["最好保持湿润"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["豹猫咒文药水"],
     "item.minecraft.splash_potion.effect.to_ocelot_0_potion": ["喷溅型豹猫咒文药水"],
     "item.minecraft.lingering_potion.effect.to_ocelot_0_potion": ["滞留型豹猫咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_ocelot_0_potion": ["豹猫咒文之箭"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["你会想要储备一点生肉的"],
   "item.minecraft.potion.effect.to_feral_cat_sp_potion": ["野性猫之咒文药水"],
     "item.minecraft.splash_potion.effect.to_feral_cat_sp_potion": ["喷溅型野性猫之咒文药水"],
     "item.minecraft.lingering_potion.effect.to_feral_cat_sp_potion": ["滞留型野性猫之咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_feral_cat_sp_potion": ["野性猫之咒文之箭"],
   "effect.shape-shifter-curse.to_feral_cat_sp_potion": ["喵？"],
   "item.minecraft.potion.effect.to_familiar_fox_0_potion": ["狐之使魔咒文药水"],
   "item.minecraft.splash_potion.effect.to_familiar_fox_0_potion": ["喷溅型狐之使魔咒文药水"],
   "item.minecraft.lingering_potion.effect.to_familiar_fox_0_potion": ["滞留型狐之使魔咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_familiar_fox_0_potion": ["狐之使魔咒文之箭"],
   "effect.shape-shifter-curse.to_familiar_fox_0_potion": ["其中的魔力被修改了..也许可以用金粒来净化它？"],
   "item.minecraft.potion.effect.to_snow_fox_0_potion": ["雪狐咒文药水"],
   "item.minecraft.splash_potion.effect.to_snow_fox_0_potion": ["喷溅型雪狐咒文药水"],
   "item.minecraft.lingering_potion.effect.to_snow_fox_0_potion": ["滞留型雪狐咒文药水"],
+  "item.minecraft.tipped_arrow.effect.to_snow_fox_0_potion": ["雪狐咒文之箭"],
   "effect.shape-shifter-curse.to_snow_fox_0_potion": ["净化之后，你感觉它摸起来有点冰凉"],
 
   "item.minecraft.potion.effect.feed_potion": ["压缩能量药水"],
   "item.minecraft.splash_potion.effect.feed_potion": ["喷溅型压缩能量药水"],
   "item.minecraft.lingering_potion.effect.feed_potion": ["滞留型压缩能量药水"],
-  "effect.shape-shifter-curse.feed_potion": ["高密度的能量在瓶中流动，可以恢复饱食度"],
+  "item.minecraft.tipped_arrow.effect.feed_potion": ["压缩能量之箭"],
+  "effect.shape-shifter-curse.feed_effect": ["高密度的能量在瓶中流动，可以恢复饱食度"],
 
   "item.minecraft.potion.effect.to_alpha_0_potion": ["ALPHA"],
     "item.minecraft.splash_potion.effect.to_alpha_0_potion": ["ALPHA"],
     "item.minecraft.lingering_potion.effect.to_alpha_0_potion": ["ALPHA"],
+  "item.minecraft.tipped_arrow.effect.to_alpha_0_potion": ["ALPHA"],
   "effect.shape-shifter-curse.to_alpha_0_potion": ["empty custom alpha form"],
   "item.minecraft.potion.effect.to_beta_0_potion": ["BETA"],
     "item.minecraft.splash_potion.effect.to_beta_0_potion": ["BETA"],
     "item.minecraft.lingering_potion.effect.to_beta_0_potion": ["BETA"],
+  "item.minecraft.tipped_arrow.effect.to_beta_0_potion": ["BETA"],
   "effect.shape-shifter-curse.to_beta_0_potion": ["empty custom beta form"],
   "item.minecraft.potion.effect.to_gamma_0_potion": ["GAMMA"],
     "item.minecraft.splash_potion.effect.to_gamma_0_potion": ["GAMMA"],
     "item.minecraft.lingering_potion.effect.to_gamma_0_potion": ["GAMMA"],
+  "item.minecraft.tipped_arrow.effect.to_gamma_0_potion": ["GAMMA"],
   "effect.shape-shifter-curse.to_gamma_0_potion": ["empty custom gamma form"],
   "item.minecraft.potion.effect.to_omega_sp_potion": ["OMEGA"],
     "item.minecraft.splash_potion.effect.to_omega_sp_potion": ["OMEGA"],
     "item.minecraft.lingering_potion.effect.to_omega_sp_potion": ["OMEGA"],
+  "item.minecraft.tipped_arrow.effect.to_omega_sp_potion": ["OMEGA"],
   "effect.shape-shifter-curse.to_omega_sp_potion": ["empty custom omega special form"],
   "item.minecraft.potion.effect.to_psi_sp_potion": ["PSI"],
     "item.minecraft.splash_potion.effect.to_psi_sp_potion": ["PSI"],
     "item.minecraft.lingering_potion.effect.to_psi_sp_potion": ["PSI"],
+  "item.minecraft.tipped_arrow.effect.to_psi_sp_potion": ["PSI"],
   "effect.shape-shifter-curse.to_psi_sp_potion": ["empty custom psi special form"],
   "item.minecraft.potion.effect.to_chi_sp_potion": ["CHI"],
     "item.minecraft.splash_potion.effect.to_chi_sp_potion": ["CHI"],
     "item.minecraft.lingering_potion.effect.to_chi_sp_potion": ["CHI"],
+  "item.minecraft.tipped_arrow.effect.to_chi_sp_potion": ["CHI"],
   "effect.shape-shifter-curse.to_chi_sp_potion": ["empty custom chi special form"],
   "item.minecraft.potion.effect.to_phi_sp_potion": ["PHI"],
     "item.minecraft.splash_potion.effect.to_phi_sp_potion": ["PHI"],
     "item.minecraft.lingering_potion.effect.to_phi_sp_potion": ["PHI"],
+  "item.minecraft.tipped_arrow.effect.to_phi_sp_potion": ["PHI"],
   "effect.shape-shifter-curse.to_phi_sp_potion": ["empty custom phi special form"],
 
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
