--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -39,68 +39,84 @@
   "item.minecraft.potion.effect.moondust_potion": ["Potion of Moondust"],
     "item.minecraft.splash_potion.effect.moondust_potion": ["Splash Potion of Moondust"],
     "item.minecraft.lingering_potion.effect.moondust_potion": ["Lingering Potion of Moondust"],
+  "item.minecraft.tipped_arrow.effect.moondust_potion": ["Arrow of Moondust"],
   "effect.shape-shifter-curse.moondust_potion": ["The essence of moondust surges within, it requires further processing"],
   "item.minecraft.potion.effect.to_bat_0_potion": ["Bat Curse Potion"],
     "item.minecraft.splash_potion.effect.to_bat_0_potion": ["Splash Bat Curse Potion"],
     "item.minecraft.lingering_potion.effect.to_bat_0_potion": ["Lingering Bat Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_bat_0_potion": ["Arrow of Bat Curse"],
   "effect.shape-shifter-curse.to_bat_0_potion": ["Squeak!"],
   "item.minecraft.potion.effect.to_allay_sp_potion": ["Allay Curse Potion"],
     "item.minecraft.splash_potion.effect.to_allay_sp_potion": ["Splash Allay Curse Potion"],
     "item.minecraft.lingering_potion.effect.to_allay_sp_potion": ["Lingering Allay Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_allay_sp_potion": ["Arrow of Allay Curse"],
   "effect.shape-shifter-curse.to_allay_sp_potion": ["Amethyst shards! They'll be important"],
   "item.minecraft.potion.effect.to_axolotl_0_potion": ["Axolotl Curse Potion"],
     "item.minecraft.splash_potion.effect.to_axolotl_0_potion": ["Splash Axolotl Curse Potion"],
     "item.minecraft.lingering_potion.effect.to_axolotl_0_potion": ["Lingering Axolotl Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_axolotl_0_potion": ["Arrow of Axolotl Curse"],
   "effect.shape-shifter-curse.to_axolotl_0_potion": ["Better stay moist"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["Ocelot Curse Potion"],
     "item.minecraft.splash_potion.effect.to_ocelot_0_potion": ["Splash Ocelot Curse Potion"],
     "item.minecraft.lingering_potion.effect.to_ocelot_0_potion": ["Lingering Ocelot Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_ocelot_0_potion": ["Arrow of Ocelot Curse"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["You'll want to stock up on raw meat"],
   "item.minecraft.potion.effect.to_feral_cat_sp_potion": ["Feral Cat Curse Potion"],
     "item.minecraft.splash_potion.effect.to_feral_cat_sp_potion": ["Splash Feral Cat Curse Potion"],
     "item.minecraft.lingering_potion.effect.to_feral_cat_sp_potion": ["Lingering Feral Cat Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_feral_cat_sp_potion": ["Arrow of Feral Cat Curse"],
   "effect.shape-shifter-curse.to_feral_cat_sp_potion": ["Meow？"],
   "item.minecraft.potion.effect.to_familiar_fox_0_potion": ["Familiar Fox Curse Potion"],
   "item.minecraft.splash_potion.effect.to_familiar_fox_0_potion": ["Splash Familiar Fox Curse Potion"],
   "item.minecraft.lingering_potion.effect.to_familiar_fox_0_potion": ["Lingering Familiar Fox Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_familiar_fox_0_potion": ["Arrow of Familiar Fox Curse"],
   "effect.shape-shifter-curse.to_familiar_fox_0_potion": ["It has been altered.. maybe use a gold nuggets to purify it?"],
   "item.minecraft.potion.effect.to_snow_fox_0_potion": ["Snow Fox Curse Potion"],
   "item.minecraft.splash_potion.effect.to_snow_fox_0_potion": ["Splash Snow Fox Curse Potion"],
   "item.minecraft.lingering_potion.effect.to_snow_fox_0_potion": ["Lingering Snow Fox Curse Potion"],
+  "item.minecraft.tipped_arrow.effect.to_snow_fox_0_potion": ["Arrow of Snow Fox Curse"],
   "effect.shape-shifter-curse.to_snow_fox_0_potion": ["After purification, you feel it's slightly cold to the touch"],
 
   "item.minecraft.potion.effect.feed_potion": ["Compressed Energy Potion"],
   "item.minecraft.splash_potion.effect.feed_potion": ["Splash Compressed Energy Potion"],
   "item.minecraft.lingering_potion.effect.feed_potion": ["Lingering Compressed Energy Potion"],
-  "effect.shape-shifter-curse.feed_potion": ["Bottled high-density energy, capable of restoring satiety"],
+  "item.minecraft.tipped_arrow.effect.feed_potion": ["Arrow of Compressed Energy"],
+  "effect.shape-shifter-curse.feed_effect": ["Bottled high-density energy, capable of restoring satiety"],
 
   "item.minecraft.potion.effect.to_alpha_0_potion": ["ALPHA"],
   "item.minecraft.splash_potion.effect.to_alpha_0_potion": ["ALPHA"],
   "item.minecraft.lingering_potion.effect.to_alpha_0_potion": ["ALPHA"],
+  "item.minecraft.tipped_arrow.effect.to_alpha_0_potion": ["ALPHA"],
   "effect.shape-shifter-curse.to_alpha_0_potion": ["empty custom alpha form"],
   "item.minecraft.potion.effect.to_beta_0_potion": ["BETA"],
   "item.minecraft.splash_potion.effect.to_beta_0_potion": ["BETA"],
   "item.minecraft.lingering_potion.effect.to_beta_0_potion": ["BETA"],
+  "item.minecraft.tipped_arrow.effect.to_beta_0_potion": ["BETA"],
   "effect.shape-shifter-curse.to_beta_0_potion": ["empty custom beta form"],
   "item.minecraft.potion.effect.to_gamma_0_potion": ["GAMMA"],
   "item.minecraft.splash_potion.effect.to_gamma_0_potion": ["GAMMA"],
   "item.minecraft.lingering_potion.effect.to_gamma_0_potion": ["GAMMA"],
+  "item.minecraft.tipped_arrow.effect.to_gamma_0_potion": ["GAMMA"],
   "effect.shape-shifter-curse.to_gamma_0_potion": ["empty custom gamma form"],
   "item.minecraft.potion.effect.to_omega_sp_potion": ["OMEGA"],
   "item.minecraft.splash_potion.effect.to_omega_sp_potion": ["OMEGA"],
   "item.minecraft.lingering_potion.effect.to_omega_sp_potion": ["OMEGA"],
+  "item.minecraft.tipped_arrow.effect.to_omega_sp_potion": ["OMEGA"],
   "effect.shape-shifter-curse.to_omega_sp_potion": ["empty custom omega special form"],
   "item.minecraft.potion.effect.to_psi_sp_potion": ["PSI"],
   "item.minecraft.splash_potion.effect.to_psi_sp_potion": ["PSI"],
   "item.minecraft.lingering_potion.effect.to_psi_sp_potion": ["PSI"],
+  "item.minecraft.tipped_arrow.effect.to_psi_sp_potion": ["PSI"],
   "effect.shape-shifter-curse.to_psi_sp_potion": ["empty custom psi special form"],
   "item.minecraft.potion.effect.to_chi_sp_potion": ["CHI"],
   "item.minecraft.splash_potion.effect.to_chi_sp_potion": ["CHI"],
   "item.minecraft.lingering_potion.effect.to_chi_sp_potion": ["CHI"],
+  "item.minecraft.tipped_arrow.effect.to_chi_sp_potion": ["CHI"],
   "effect.shape-shifter-curse.to_chi_sp_potion": ["empty custom chi special form"],
   "item.minecraft.potion.effect.to_phi_sp_potion": ["PHI"],
   "item.minecraft.splash_potion.effect.to_phi_sp_potion": ["PHI"],
   "item.minecraft.lingering_potion.effect.to_phi_sp_potion": ["PHI"],
+  "item.minecraft.tipped_arrow.effect.to_phi_sp_potion": ["PHI"],
   "effect.shape-shifter-curse.to_phi_sp_potion": ["empty custom phi special form"],
 
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["Strange Book"],
