修复Shader报错，补充雪狐形态描述中缺漏的部分 Fix shader warning, add missing parts of snow_fox_3 codex pros and cons

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -473,8 +473,8 @@
   "codex.form.snow_fox2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
   "codex.form.snow_fox3.title": ["\n你完全接纳了体内的那股寒冷的魔力，让它彻底改变了你。是时候在雪林中找一处新的巢穴了.."],
   "codex.form.snow_fox3.appearance": ["除了异常蓬松的颈毛与近乎与身体等长的大尾巴以外，你整体看上去与一只野生雪狐别无二致\n你的眼睛现在毫无疑问属于某种野生动物。在阳光下，你的瞳孔会收缩成一条狭缝\n\n你体内的寒冷魔力已经与原本的变幻魔法完全融合在一起，并永远转变为了某种全新的东西..\n空气中的水汽在你身旁会凝结成细小的冰晶。即使在暴风雪中，你也不会感受到丝毫寒冷。然而，曾经温和的气候对现在的你而言已经炎热异常\n看来你只能接受这一点了。"],
-  "codex.form.snow_fox3.pros": ["寒冷的魔力已经与你完全融为一体：\n你投掷出的雪球能够造成大量的伤害，威力堪比箭矢。由于附加了寒气魔力，你可以通过投掷雪球将水变成冰，乃至于让岩浆凝固\n\n四足行动的身体给了你极大的敏捷性：\n在下落时，你可以通过右键“使用”地面，利用前爪让自己灵活地腾跃到空中\n在维持奔跑时，通过掌握时机，你可以触发每次高度递增的三连跳\n你的跳跃暴击伤害会随着下落距离而增加，最高可以到达2倍\n\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n甜浆果可以给你带来更多的饱食度\n狐狸信任你。它们不会主动跑开\n你现在可以在细雪上行走"],
-  "codex.form.snow_fox3.cons": ["寒冷的魔力组成了你的身体。它带来了一些副作用：\n火焰与高温是你最大的敌人。你会受到额外的燃烧伤害，并且你身上的火焰不会自然扑灭，除非进入水中或者使用水瓶灭火\n当白天在炎热的沙漠群系，或者炽热的下界中时，你的最大生命值会大幅度减少。除此之外，温暖的平原群系对现在的你而言也热的难以忍受，位于其中时，你的最大生命值也会减少\n当你非常靠近岩浆或燃烧的火焰，或者在岩浆中时，你会逐渐受到伤害，即使有火焰免疫效果也一样\n腿甲与鞋不再适合你四足的身体结构\n你蓬松的毛皮进一步拖慢了你在水中的移动速度"],
+  "codex.form.snow_fox3.pros": ["寒冷的魔力已经与你完全融为一体：\n你投掷出的雪球能够造成大量的伤害，威力堪比箭矢。由于附加了寒气魔力，你可以通过投掷雪球将水变成冰，乃至于让岩浆凝固\n\n四足行动的身体给了你极大的敏捷性：\n在下落时，你可以通过右键“使用”地面，利用前爪让自己灵活地腾跃到空中\n在维持奔跑时，通过掌握时机，你可以触发每次高度递增的三连跳\n你的跳跃暴击伤害会随着下落距离而增加，最高可以到达2倍\n\n由于你的体型，远程攻击难以命中你\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n甜浆果可以给你带来更多的饱食度\n狐狸信任你。它们不会主动跑开\n你现在可以在细雪上行走"],
+  "codex.form.snow_fox3.cons": ["寒冷的魔力组成了你的身体。它带来了一些副作用：\n火焰与高温是你最大的敌人。你会受到额外的燃烧伤害，并且你身上的火焰不会自然扑灭，除非进入水中或者使用水瓶灭火\n当白天在炎热的沙漠群系，或者炽热的下界中时，你的最大生命值会大幅度减少。除此之外，温暖的平原群系对现在的你而言也热的难以忍受，位于其中时，你的最大生命值也会减少\n当你非常靠近岩浆或燃烧的火焰，或者在岩浆中时，你会逐渐受到伤害，即使有火焰免疫效果也一样\n腿甲与鞋不再适合你四足的身体结构\n由于不再有能够自如使用工具的双手，你挖掘方块的速度变得更慢\n你蓬松的毛皮进一步拖慢了你在水中的移动速度"],
   "codex.form.snow_fox3.instincts": [""],
 
   "codex.form.familiar_fox0.title":["\n诅咒对你的身体产生了一些影响，橙红色的毛簇开始从你身上生长出来。你有点想要在雪地上奔跑"],
