--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -599,6 +599,16 @@
   "codex.form.phi_sp.cons": [" "],
   "codex.form.phi_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"],
 
+  "text.shape-shifter-curse.config.title": "幻形者诅咒 配置界面",
+  "text.shape-shifter-curse.config.close": "取消",
   "text.autoconfig.shape-shifter-curse-client.title": "幻形者诅咒 - 客户端配置",
-  "text.autoconfig.shape-shifter-curse-client.option.enableFormModelOnVanillaFirstPersonRender": "原版第一人称下启用形态模型渲染"
+  "text.autoconfig.shape-shifter-curse-client.category.General": "常规配置",
+  "text.autoconfig.shape-shifter-curse-client.option.enableFormModelOnVanillaFirstPersonRender": "原版第一人称下启用形态模型渲染",
+  "text.autoconfig.shape-shifter-curse-client.category.InDevelopment": "开发中配置",
+  "text.autoconfig.shape-shifter-curse-client.option.inDevelopmentConfigPlaceHolder": "开发中配置占位符",
+  "text.autoconfig.shape-shifter-curse-common.title": "幻形者诅咒 - 通用配置",
+  "text.autoconfig.shape-shifter-curse-common.category.General": "常规配置",
+  "text.autoconfig.shape-shifter-curse-common.option.generalConfigPlaceHolder": "配置占位符",
+  "text.autoconfig.shape-shifter-curse-common.category.InDevelopment": "开发中配置",
+  "text.autoconfig.shape-shifter-curse-common.option.inDevelopmentConfigPlaceHolder": "开发中配置占位符"
 }
