--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -605,7 +605,7 @@
   "text.autoconfig.shape-shifter-curse-client.category.General": "常规配置",
   "text.autoconfig.shape-shifter-curse-client.option.enableFormModelOnVanillaFirstPersonRender": "原版第一人称下启用形态模型渲染",
   "text.autoconfig.shape-shifter-curse-client.category.InDevelopment": "开发中配置",
-  "text.autoconfig.shape-shifter-curse-client.option.inDevelopmentConfigPlaceHolder": "开发中配置占位符",
+  "text.autoconfig.shape-shifter-curse-client.option.newStartBookForBiggerScreen": "更大的新版幻形者之书界面",
   "text.autoconfig.shape-shifter-curse-common.title": "幻形者诅咒 - 通用配置",
   "text.autoconfig.shape-shifter-curse-common.category.General": "常规配置",
   "text.autoconfig.shape-shifter-curse-common.option.transformativeBatSpawnChance": "咒文蝙蝠刷新成功率",
