重构本能系统测试完毕 添加忽略不渲染手臂的Power的配置

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -437,6 +437,7 @@
   "text.autoconfig.shape-shifter-curse-client.title": "Shape Shifter Curse - Client Config",
   "text.autoconfig.shape-shifter-curse-client.category.General": "General",
   "text.autoconfig.shape-shifter-curse-client.option.enableFormModelOnVanillaFirstPersonRender": "Enable Render form model on vanilla first person render",
+  "text.autoconfig.shape-shifter-curse-client.option.ignoreNoRenderArmPower": "Ignore NoRenderArm Power",
   "text.autoconfig.shape-shifter-curse-client.category.InDevelopment": "In Development",
   "text.autoconfig.shape-shifter-curse-client.option.newStartBookForBiggerScreen": "Make The New Version of Start Book Interface Bigger",
   "text.autoconfig.shape-shifter-curse-common.title": "Shape Shifter Curse - Common Config",
