--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -259,6 +259,12 @@
   "codex.form.axolotl2.cons": "水分现在是你的生命线。当丧失湿润度时，你的最大生命值与移动速度均会大幅降低，让你几乎寸步难行\n\n你无法再装备头盔\n由于你湿润的皮肤与鳍膜，你在松散的地面上的移动速度会被颗粒与沙尘拖慢\n你只能食用肉类",
   "codex.form.axolotl2.instincts": " ",
 
+  "codex.form.axolotl3.appearance": "",
+  "codex.form.axolotl3.title": "",
+  "codex.form.axolotl3.pros": "",
+  "codex.form.axolotl3.cons": "",
+  "codex.form.axolotl3.instincts": "",
+
   "codex.form.ocelot0.title": "\n诅咒对你产生了一些可见的影响。你发现你的身体在潜行时变得更加自然协调",
   "codex.form.ocelot0.appearance": "你的耳朵移动到了头顶，它们现在被斑驳的绒毛覆盖，外形介于三角与半圆之间，看起来有点类似某种猫科动物的\n你的四肢末端被带斑点的白色皮毛覆盖，看起来有点像是一双厚实的手套或袜子。在皮毛之下，你的手指似乎也产生了一些变化，它们似乎比之前更加有力\n绒毛也开始围绕着你的颈部生长了出来，远远看去就像一条围巾一样\n你的腹部也长出了一层短小细密的绒毛，它们相当保暖\n一条短小的尾部从你的尾骨末端延伸出来，他也被灰白相间的毛皮所覆盖。在移动时，你感觉它反而有些影响你的平衡感",
   "codex.form.ocelot0.pros": "你的身体更加协调，让你潜行时的速度变得更快了\n腐肉对你现在的消化系统而言是小菜一碟。你不再会陷入异常的饥饿状态\n不知为何，苦力怕现在非常害怕你",
